2006-05-04  Alex Roitman  <shura@gramps-project.org>
	* src/SelectObject.py: Convert to managed window.
	* src/SelectEvent.py: Convert to managed window.
	* src/SelectSource.py: Convert to managed window.
	* src/DisplayTabs.py: Properly call selectors.
	(DataEmbedList): Hook up data map for sources.

2006-05-03  Alex Roitman  <shura@gramps-project.org>
	* src/DisplayTabs.py (NoteTab.build_interface): Add spacing to
	radiobuttons.
	* src/plugins/ReorderIds.py (ReorderIds.reorder): Switch from
	cursors to keys iteration.

2006-05-03  Don Allingham  <don@gramps-project.org>
	* src/ViewManager.py: do a better job of building the buttons.

2006-05-03  Alex Roitman  <shura@gramps-project.org>
	* src/PluginUtils/_Tool.py (BatchTool): Add class taking care of
	tools with batch transactions.
	(ActivePersonTool.pass): Remove method.
	* src/plugins/Check.py (Check): Derive from BatchTool.
	* src/plugins/ReorderIds.py (ReorderIds): Use batch transactions;
	derive from BatchTool.
	* src/plugins/ChangeTypes.py (ChangeTypes): Use batch
	transactions; derive from BatchTool. 
	* src/plugins/ChangeNames.py (ChangeNames): Derive from BatchTool.
	* src/plugins/PatchNames.py (PatchNames): Use batch transactions;
	derive from BatchTool.
	* src/glade/gramps.glade: Make both buttons' lables in
	questiondialog use underline property.
	* src/GrampsDb/_GrampsInMemDB.py (abort_changes): Remove method.
	* src/GrampsDb/_GrampsDbBase.py (abort_changes): Remove method.
	(GrampsDbBase.transaction_begin): No aborting after batch transaction.
	* src/GrampsDb/_GrampsBSDDB.py (undo,redo): Use the status from
	GrampsDbBase undo/redo;
	(abort_changes): Remove method.
	(GrampsBSDDB.transaction_begin): No aborting after batch transaction.
	* src/ViewManager.py (abort): Add method for abandoning changes.
	(ViewManager.import_data): Add undo warning for imports.

	* configure.in: Set release to 0.SVN.
	* src/DataViews/_PersonView.py (define_actions): Change label.
