@@ -1,3 +1,6 @@
+2006-05-04  Don Allingham  <don@gramps-project.org>
+	* src/DataViews/_PersonView.py: start of filter sidebar
+
 2006-05-04  Alex Roitman  <shura@gramps-project.org>
 	* src/SelectObject.py: Convert to managed window.
 	* src/SelectEvent.py: Convert to managed window.
